# EmotionLens

./: README.md  api.py  audio_encoder.py  ci.yml  cli.py  emotions.py  explainer.py  pipeline.py  pyproject.toml  quickstart.ipynb  test_emotionlens.py  test_layer1.py  text_encoder.py
